editors/tree-sitter-musa/grammar.js
    source_file: ($) => choice($.piece_declaration, $.library_declaration),

    // --- Piece level (Parser::piece_decl) -------------------------------

    piece_declaration: ($) =>
      seq(
        'piece',
        field('name', $.string),
        '{',
        repeat(
          choice(
            $.import_statement,
            $.tempo_statement,
            $.meter_statement,
            $.key_statement,
            $.front_matter_statement,
            $.motif_declaration,
            $.fragment_declaration,
            $.score_declaration,
            $.performance_declaration,
            $.studio_declaration,
          ),
        ),
        '}',
      ),

    // Parser::library_decl — what can be shared: no score, no header.
    tempo_statement: ($) =>
      seq(
        'tempo',
        choice(
          // The word may lead (`tempo "Andante";`) — and a gradual change
          // may still reach from it.
          seq(field('word', $.string), optional($.tempo_span)),
          seq(
            optional(field('beat', choice($.identifier, $.rational))),
            '=',
            field('bpm', $.integer),
            // `to 60` — where a gradual change arrives, in the same beat
            // unit. `to` rather than a keyword of its own, for the reason
            // `crescendo to f` reads: arriving somewhere is one idea.
            optional(seq('to', field('arrives', $.integer))),
            optional($.tempo_span),
            // The word may trail, for a marking that says both.
            optional(field('word', $.string)),
          ),
        ),
        ';',
      ),

    // `over 4/1` — how far a gradual change reaches.
    meter_statement: ($) => seq('meter', field('meter', $.rational), ';'),

    // Parser::key_stmt — `key a minor;`
    key_statement: ($) => seq('key', field('pitch_class', $.identifier), field('mode', $.identifier), ';'),

    // Parser::motif_decl — parameters inline, as in the hand parser: a
    // comma-joined run of `name: type (= default)?`, trailing comma allowed.
    score_declaration: ($) =>
      seq(
        'score',
        '{',
        repeat(choice($.part_declaration, $.section_statement, $.harmony_declaration)),
        '}',
      ),

    part_declaration: ($) =>
      seq(
        'part',
        field('name', $.identifier),
        '{',
        repeat(choice($.clef_statement, $.profile_statement, $.voice_declaration)),
        '}',
      ),

    // Parser::clef_stmt.
    clef_statement: ($) => seq('clef', field('name', $.identifier), ';'),

    // Parser::profile_stmt — which profile realizes this part.
    profile_statement: ($) => seq('profile', field('name', $.identifier), ';'),

    // Parser::voice_decl — the braces are the declaration's own, no Block.
    voice_declaration: ($) =>
      seq('voice', field('name', $.identifier), '{', repeat(choice(...VOICE_ITEMS($))), '}'),

    // --- Performance level (Parser::performance_decl) -------------------

    performance_declaration: ($) => seq('performance', '{', repeat($.profile_declaration), '}'),

    profile_declaration: ($) =>
      seq(
        'profile',
        field('name', $.identifier),
        '{',
        repeat(choice($.mark_rule, $.dynamic_rule, $.groove_rule, $.grace_rule)),
        '}',
      ),

    // Parser::rule — `mark|dynamic|groove <name> { <setting>* }`.
    dynamic_rule: ($) => seq('dynamic', field('name', $.identifier), field('body', $.settings_block)),
    grace_rule: ($) => seq('grace', field('body', $.settings_block)),

    // Parser::settings_block.
    settings_block: ($) => seq('{', repeat($.setting_statement), '}'),

    // Parser::setting_stmt — `<name> = [-]<number or word> [ms|s];`
    setting_statement: ($) =>
      seq(
        field('name', $.identifier),
        '=',
        optional('-'),
        field('value', choice($.float, $.integer, $.rational, $.identifier)),
        optional(field('unit', $.unit)),
        ';',
      ),

    // --- Studio level (Parser::studio_decl and below, roadmap §7.1) -----

    note_statement: ($) =>
      seq(
        field('pitch', choice($.pitch_literal, $.identifier)),
        $.duration,
        optional($.articulation_list),
        optional('~'),
        ';',
      ),

    // Parser::articulations — their own node, by the hand parser's own rule:
    // a bare identifier here is an articulation, not a reference.
    articulation_list: ($) => repeat1($.identifier),

    // Parser::duration — `1/4`, `1`, or a parameter reference; `to` bounds
    // how long the written value may be held (roadmap §2).
    duration: ($) =>
      seq(
        choice($.rational, $.integer, $.identifier),
        optional(seq('to', choice($.rational, $.integer, $.identifier))),
      ),

    grace_statement: ($) => seq('grace', '{', repeat($.grace_note), '}'),

    grace_note: ($) =>
      seq(field('pitch', choice($.pitch_literal, $.identifier)), optional($.articulation_list), ';'),

    // Parser::phrase_stmt — `phrase "A" { ... }`
    dynamic_statement: ($) => seq('dynamic', field('mark', $.identifier), ';'),

    // Parser::stretch_stmt — `stretch <n>/<d> { ... }`
    pitch_literal: ($) => /[a-g](ss|ff|[sfn])?-?[0-9]+/,

    // `[PMm][0-9]+` — an interval: quality and size.
    rational: ($) => /[0-9]+\/[0-9]+/,
    float: ($) => /[0-9]+\.[0-9]+/,
    integer: ($) => /[0-9]+/,
    identifier: ($) => /[a-zA-Z_]+/,

    // `"([^"\\\n]|\\[^\n])*"` — one quoted line. An unterminated quote is
    // error recovery's business, exactly as the hand lexer leaves it.
    string: ($) => /"([^"\\\n]|\\[^\n])*"/,

    // The units the parser's rules consume: `Hz`, `ms`, `s`, `dB`. (`bpm`
    // lexes but no rule reads it yet; it joins when one does.)
    comment: ($) =>
      choice(
        // `//[^\n]*`
        /\/\/[^\n]*/,
        // `(?s)/\*([^*]|\*[^/])*\*/`
        // `(?s)/\*([^*]|\*[^/])*\*/` — the flag needs no spelling here: the
        // classes are negations, which match newlines in both regex flavors.
        /\/\*([^*]|\*[^/])*\*\//,
      ),
  },
});
