editors/tree-sitter-musa/test/corpus/graces-reordered.txt
================================================================================
graces-reordered
================================================================================

// Grace notes, and the question the page refuses to answer (docs/plan/prompts/71).
//
// A grace note has no written duration. That is not an omission musa has to
// patch over — it is the fact about grace notes, and the temporal kernel says
// it exactly: a grace is a *point* occurrence, start equal to end, standing at
// the onset of the note it leans on.
//
// So the time it sounds for has to come from somewhere, and *where* is a
// question Baroque and Romantic practice genuinely disagree about. On the
// beat, delaying the principal, is an appoggiatura; ahead of it, leaving the
// principal where the bar puts it, is an acciaccatura. MusicXML settles this
// in the file — `steal-time-previous="50"` — and so makes the editor decide
// once, for every performer, forever. musa keeps it where it belongs: two
// profiles read the same page two ways, and the page is unchanged.
//
// Compare with `graces-reordered.musa`, which is this piece with one grace
// group written backwards. The two must not compile to the same kernel term:
// normalization orders occurrences by span and then by payload, every grace in
// a group shares a span, so the order is carried in the payload or it is lost.
piece "Graces" {
    tempo 1/4 = 84;
    meter 4/4;
    key d major;

    performance {
        // The Baroque reading: the grace is a real note of the melody, it
        // falls on the beat, and the principal comes late.
        profile baroque {
            grace {
                steal = 1/8;
                from = principal;
            }

            dynamic mf {
                amplitude = 0.6;
            }
        }

        // The Romantic reading: the grace is crushed in ahead of the beat, and
        // the principal lands exactly where the page says.
        profile romantic {
            grace {
                steal = 1/32;
                from = previous;
            }

            dynamic mf {
                amplitude = 0.6;
            }
        }
    }

    score {
        part upper {
            clef treble;
            profile baroque;

            voice tune {
                dynamic mf;

                // One grace, the ordinary case.
                grace { c#6 }
                d6/4

                a5/4

                // Three of them, and the order is the music: this is a turn
                // written out rather than named.
                grace { c#6 d6 e6 }
                d6/2

                // A grace on the first note of a voice has nothing behind the
                // beat to take from, so even the Romantic profile takes it
                // from the principal. The page does not know that; the
                // performer does, and so does the profile.
                b5/4
                grace { a#5 }
                b5/4

                // Marks on a grace are marks: the profile that shortens a
                // staccato note shortens a staccato grace for the same reason.
                grace { g5 staccato }
                f#5/2

                d5/1
            }
        }

        part lower {
            clef bass;
            profile romantic;

            voice bass {
                dynamic mf;

                d4/2
                a3/2

                // The same figure, read the other way: these graces sound
                // before the beat and the principal is untouched.
                grace { a3 g3 }
                b3/2
                f#3/2

                g3/2
                a3/2

                d3/1
            }
        }
    }
}

// `graces.musa` with two grace groups written backwards, and nothing else
// changed. The note is at the bottom of the file on purpose: every byte above
// it is identical to `graces.musa`, so `diff` on the two kernel terms shows
// the reordering and nothing else.
//
// The diff must not be empty. Every grace in a group stands at one instant, so
// normalization (docs/rules/kernel/05, N2) orders occurrences by span and then by
// payload key — and a span they all share settles nothing. The written order
// is carried in the payload as an index, or these two pieces of music are one.

---

(source_file
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (piece_declaration
    (string)
    (tempo_statement
      (rational)
      (integer))
    (meter_statement
      (rational))
    (key_statement
      (pitch_class
        (identifier))
      (identifier))
    (performance_declaration
      (comment)
      (comment)
      (profile_declaration
        (identifier)
        (grace_rule
          (settings_block
            (setting_statement
              (identifier)
              (rational))
            (setting_statement
              (identifier)
              (identifier))))
        (dynamic_rule
          (identifier)
          (settings_block
            (setting_statement
              (identifier)
              (float)))))
      (comment)
      (comment)
      (profile_declaration
        (identifier)
        (grace_rule
          (settings_block
            (setting_statement
              (identifier)
              (rational))
            (setting_statement
              (identifier)
              (identifier))))
        (dynamic_rule
          (identifier)
          (settings_block
            (setting_statement
              (identifier)
              (float))))))
    (score_declaration
      (part_declaration
        (identifier)
        (clef_statement
          (identifier))
        (profile_statement
          (identifier))
        (voice_declaration
          (identifier)
          (dynamic_statement
            (identifier))
          (comment)
          (grace_statement
            (grace_note
              (pitch_literal)))
          (note_statement
            (pitch_literal)
            (duration
              (integer)))
          (note_statement
            (pitch_literal)
            (duration
              (integer)))
          (comment)
          (comment)
          (grace_statement
            (grace_note
              (pitch_literal))
            (grace_note
              (pitch_literal))
            (grace_note
              (pitch_literal)))
          (note_statement
            (pitch_literal)
            (duration
              (integer)))
          (comment)
          (comment)
          (comment)
          (comment)
          (note_statement
            (pitch_literal)
            (duration
              (integer)))
          (grace_statement
            (grace_note
              (pitch_literal)))
          (note_statement
            (pitch_literal)
            (duration
              (integer)))
          (comment)
          (comment)
          (grace_statement
            (grace_note
              (pitch_literal)
              (articulation_list
                (identifier))))
          (note_statement
            (pitch_literal)
            (duration
              (integer)))
          (note_statement
            (pitch_literal)
            (duration
              (integer)))))
      (part_declaration
        (identifier)
        (clef_statement
          (identifier))
        (profile_statement
          (identifier))
        (voice_declaration
          (identifier)
          (dynamic_statement
            (identifier))
          (note_statement
            (pitch_literal)
            (duration
              (integer)))
          (note_statement
            (pitch_literal)
            (duration
              (integer)))
          (comment)
          (comment)
          (grace_statement
            (grace_note
              (pitch_literal))
            (grace_note
              (pitch_literal)))
          (note_statement
            (pitch_literal)
            (duration
              (integer)))
          (note_statement
            (pitch_literal)
            (duration
              (integer)))
          (note_statement
            (pitch_literal)
            (duration
              (integer)))
          (note_statement
            (pitch_literal)
            (duration
              (integer)))
          (note_statement
            (pitch_literal)
            (duration
              (integer)))))))
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment))
